[tool.poetry]
name = "nuxt-flask"
version = "0.1.0"
description = ""
authors = ["comfuture <comfuture@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.0"
pytest = "^7.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
